test-network-policies/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      run: test-deployment
  replicas: 1
  template:
    metadata:
      labels:
        run: test-deployment
    spec:
      containers:
      - name: test-deployment
        image: nginx
        ports:
        - containerPort: 80
