test-network-policies/policy-l1-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: karydia-default-network-policy-l1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
          - {key: name, operator: NotIn, values: [kube-system]}
