test-network-policies/policy-l1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: karydia-default-network-policy-l1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
