test-network-policies/policy-l2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: karydia-default-network-policy-l2
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchExpressions:
          - {key: name, operator: NotIn, values: [kube-system]}
    - namespaceSelector:
        matchLabels: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector: 
        matchExpressions:
          - {key: name, operator: NotIn, values: [kube-system]}
