test-network-policies/policy-l3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: karydia-default-network-policy-l3
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:  
    - namespaceSelector:
        matchLabels: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - podSelector:
        matchLabels: {}
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
